--- a/index.html
+++ b/index.html
@@ -16,14 +16,31 @@
   </head>
   <body>
     <header>
-      <h1 class="welcome">welcome to the poem world</h1>
+      <h1 class="welcome">welcome to the english poem world</h1>
     </header>
 
     <main>
+      <form>
+        <input
+          type="text"
+          autofocus
+          placeholder="Enter the topic "
+          autocomplete="off"
+          required
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        The tree that never had to fight For sun and sky and air and light, But
+        stood out in the open plain And always got its share of rain, Never
+        became a forest king But lived and died a scrubby thing.
+      </div>
+    </main>
+    <footer>
       this generator is coded by kalkidan, and is available on
       <a href="https://github.com/kalkidan404/poem-generator">Github</a> and
       published at<a href="https://generate-shepoem.netlify.app"> netlify</a>
-    </main>
+    </footer>
 
     <script src="poem.js"></script>
   </body>
