--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Manufacturing+Consent&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   </head>
   <body>
     <div class="container">
@@ -21,7 +22,7 @@
       </header>
 
       <main>
-        <form>
+        <form class="poem-input">
           <input
             type="text"
             autofocus
