--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           />
           <input class="input-bttn" type="submit" />
         </form>
+        <p class="ie">i.e, flower, love, life...</p>
+        <br />
+        <p class="process"></p>
         <div class="poem">
           The tree that never had to fight For sun and sky and air and light,<br />
           But stood out in the open plain And always got its share of rain,<br />
